--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@powaa/powaa-contract",
-  "version": "0.0.1",
+  "version": "0.0.1-rc.0",
   "author": {
     "name": "Powaa Protocol Development Team"
   },
