--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
-    "@makerdao/hardhat-utils": "0.1.3"
+    "@makerdao/hardhat-utils": "0.1.3",
+    "@uniswap/v3-periphery": "^1.4.1"
   },
   "files": [
     "typechain",
