--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@makerdao/hardhat-utils": "0.1.3",
+    "@uniswap/swap-router-contracts": "^1.3.0",
     "@uniswap/v3-periphery": "^1.4.1"
   },
   "files": [
