--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+DEPLOYER_DEV_PRIVATE_KEY=""
+MAINNET_FORK_RPC_URL=""
 DEPLOYMENT_ENV= // develop | prod
 INTEGRATION_TEST_NETWORK= // goerli test network e.g. eth-mainnet eth-goerli
 ALCHEMY_KEY= // alchemy api key 
