chore: update env variables and node package's scripts

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DEPLOYER_DEV_PRIVATE_KEY=""
+DEPLOYER_PROD_PRIVATE_KEY=""
 MAINNET_FORK_RPC_URL=""
+MAINNET_RPC_URL=""
 DEPLOYMENT_ENV= // develop | prod
 INTEGRATION_TEST_NETWORK= // goerli test network e.g. eth-mainnet eth-goerli
 ALCHEMY_KEY= // alchemy api key 
