--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@powaa/powaa-contract",
-  "version": "0.0.1-rc.0",
+  "version": "0.0.1-rc.4",
   "author": {
     "name": "Powaa Protocol Development Team"
   },
@@ -10,10 +10,39 @@
     "build:foundry-ffi": "tsc -p tsconfig.foundry-ffi.json",
     "build": "tsc -p tsconfig.cjs.json; yarn copy-dts-typechain",
     "remove:sol-log": "hardhat remove-logs",
+    "mainnetfork:console": "hardhat console --network mainnetfork",
+    "----------Unit & Integration Tests-------------": "----------Unit & Integration Tests-------------",
     "test": "yarn test:foundry",
-    "test:foundry:unit": "forge test --ffi -vvv;",
+    "test:foundry:unit": "forge test --ffi -vvv",
     "test:foundry:integration": "make test-integration",
     "test:foundry": "yarn test:foundry:unit; yarn test:foundry:integration",
+    "----------Validate Mainnet Fork-------------": "----------Validate Mainnet Fork-------------",
+    "validate:fork:l2:deploy_preparation_phase": "hardhat --network mainnetfork run --no-compile ./scripts/validates/validate_deploy_preparation_phase.ts",
+    "----------Validate Mainnet-------------": "----------Validate Mainnet-------------",
+    "validate:mainnet:l2:deploy_preparation_phase": "hardhat --network mainnet run --no-compile ./scripts/validates/validate_deploy_preparation_phase.ts",
+    "----------Deploy Mainnet Fork-------------": "----------Deploy Mainnet Fork-------------",
+    "deploy:fork:l2:deploy_preparation_phase": "hardhat --network mainnetfork run --no-compile ./scripts/deployment/deploy_preparation_phase.ts",
+    "deploy:fork:l2:deploy_uniswapv3_token_migrator": "hardhat --network mainnetfork run --no-compile ./scripts/deployment/deploy_uniswapv3_token_migrator.ts",
+    "deploy:fork:l2:deploy_sushiswap_lp_token_migrator": "hardhat --network mainnetfork run --no-compile ./scripts/deployment/deploy_sushiswap_lp_token_migrator.ts",
+    "deploy:fork:l2:deploy_curve_lp_token_migrator": "hardhat --network mainnetfork run --no-compile ./scripts/deployment/deploy_curve_lp_token_migrator.ts",
+    "deploy:fork:l2:deploy_token_vault_phase": "hardhat --network mainnetfork run --no-compile ./scripts/deployment/deploy_token_vault_phase.ts",
+    "deploy:fork:l2:deploy_token_vault_phase_without_migrator": "hardhat --network mainnetfork run --no-compile ./scripts/deployment/deploy_token_vault_without_migrator.ts",
+    "----------Deploy Mainnet-------------": "----------Deploy Mainnet-------------",
+    "deploy:mainnet:l2:deploy_pre_emission_withdrawal_fee_model": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_pre_emission_withdrawal_fee_model.ts",
+    "deploy:mainnet:l2:deploy_preparation_phase": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_preparation_phase.ts",
+    "deploy:mainnet:l2:deploy_uniswapv3_token_migrator": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_uniswapv3_token_migrator.ts",
+    "deploy:mainnet:l2:deploy_sushiswap_lp_token_migrator": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_sushiswap_lp_token_migrator.ts",
+    "deploy:mainnet:l2:deploy_curve_lp_token_migrator": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_curve_lp_token_migrator.ts",
+    "deploy:mainnet:l2:deploy_curve_token_vault_phase_without_notifying_rewards": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_curve_token_vault_phase_without_notifying_rewards.ts",
+    "deploy:mainnet:l2:deploy_token_vault_phase": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_token_vault_phase.ts",
+    "deploy:mainnet:l2:deploy_token_vault_phase_without_notifying_rewards": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_token_vault_phase_without_notifying_rewards.ts",
+    "deploy:mainnet:l2:deploy_token_vault_phase_without_migrator": "hardhat --network mainnet run --no-compile ./scripts/deployment/deploy_token_vault_without_migrator.ts",
+    "----------Scripts Mainnet Fork-------------": "----------Scripts Mainnet Fork-------------",
+    "script:fork:l2:token_vault_set_curve_migration_option": "hardhat --network mainnetfork run --no-compile ./scripts/misc/token_vault_set_curve_migration_option.ts",
+    "----------Scripts Mainnet-------------": "----------Scripts Mainnet-------------",
+    "script:mainnet:l2:token_vaults_set_withdrawal_model": "hardhat --network mainnet run --no-compile ./scripts/misc/token_vaults_set_withdrawal_model.ts",
+    "script:mainnet:l2:token_vaults_notify_reward": "hardhat --network mainnet run --no-compile ./scripts/misc/token_vaults_notify_reward.ts",
+    "----------Compilations-------------------": "----------------------------------------------------",
     "compile": "rm -rf artifacts/ typechain/ compiled-typechain/ out/; yarn hardhat typechain --config hardhat.config.ts; forge build"
   },
   "license": "BUSL-1.1",
